[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Rooms/Hub/starting_pedestal.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Rooms/Hub/StartingPedestal.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Pizel.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 40 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0.0313726, 0.333333, 0.384314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -19, -42 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hide_input"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( -19, -46 ), Vector2( -19, -38 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_input"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -19, -38 ), Vector2( -19, -46 ) ]
}

[node name="StartingPedestal" type="Node2D"]
script = ExtResource( 2 )

[node name="PedestalSprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 1 )

[node name="SelectArea" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -19.0
margin_top = -42.0
margin_right = 21.0
margin_bottom = -2.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Z[/center]"
text = "Z"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hide_input = SubResource( 4 )
anims/show_input = SubResource( 5 )

[connection signal="body_entered" from="SelectArea" to="." method="_on_SelectArea_body_entered"]
[connection signal="body_exited" from="SelectArea" to="." method="_on_SelectArea_body_exited"]
